Add initial version of FedMoon

--- a/experiments/inintial_fedpart_experiments.ipynb
+++ b/experiments/inintial_fedpart_experiments.ipynb
@@ -2,39 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: ipywidgets in /Users/macbook/Desktop/L361/L361_Project/.venv/lib/python3.9/site-packages (8.1.5)\n",
-      "Requirement already satisfied: comm>=0.1.3 in /Users/macbook/Desktop/L361/L361_Project/.venv/lib/python3.9/site-packages (from ipywidgets) (0.2.2)\n",
-      "Requirement already satisfied: ipython>=6.1.0 in /Users/macbook/Desktop/L361/L361_Project/.venv/lib/python3.9/site-packages (from ipywidgets) (8.18.1)\n",
-      "Requirement already satisfied: traitlets>=4.3.1 in /Users/macbook/Desktop/L361/L361_Project/.venv/lib/python3.9/site-packages (from ipywidgets) (5.14.3)\n",
-      "Requirement already satisfied: widgetsnbextension~=4.0.12 in /Users/macbook/Desktop/L361/L361_Project/.venv/lib/python3.9/site-packages (from ipywidgets) (4.0.13)\n",
-      "Requirement already satisfied: jupyterlab-widgets~=3.0.12 in /Users/macbook/Desktop/L361/L361_Project/.venv/lib/python3.9/site-packages (from ipywidgets) (3.0.13)\n",
-      "Requirement already satisfied: decorator in /Users/macbook/Desktop/L361/L361_Project/.venv/lib/python3.9/site-packages (from ipython>=6.1.0->ipywidgets) (5.1.1)\n",
-      "Requirement already satisfied: jedi>=0.16 in /Users/macbook/Desktop/L361/L361_Project/.venv/lib/python3.9/site-packages (from ipython>=6.1.0->ipywidgets) (0.19.2)\n",
-      "Requirement already satisfied: matplotlib-inline in /Users/macbook/Desktop/L361/L361_Project/.venv/lib/python3.9/site-packages (from ipython>=6.1.0->ipywidgets) (0.1.7)\n",
-      "Requirement already satisfied: prompt-toolkit<3.1.0,>=3.0.41 in /Users/macbook/Desktop/L361/L361_Project/.venv/lib/python3.9/site-packages (from ipython>=6.1.0->ipywidgets) (3.0.50)\n",
-      "Requirement already satisfied: pygments>=2.4.0 in /Users/macbook/Desktop/L361/L361_Project/.venv/lib/python3.9/site-packages (from ipython>=6.1.0->ipywidgets) (2.19.1)\n",
-      "Requirement already satisfied: stack-data in /Users/macbook/Desktop/L361/L361_Project/.venv/lib/python3.9/site-packages (from ipython>=6.1.0->ipywidgets) (0.6.3)\n",
-      "Requirement already satisfied: typing-extensions in /Users/macbook/Desktop/L361/L361_Project/.venv/lib/python3.9/site-packages (from ipython>=6.1.0->ipywidgets) (4.12.2)\n",
-      "Requirement already satisfied: exceptiongroup in /Users/macbook/Desktop/L361/L361_Project/.venv/lib/python3.9/site-packages (from ipython>=6.1.0->ipywidgets) (1.2.2)\n",
-      "Requirement already satisfied: pexpect>4.3 in /Users/macbook/Desktop/L361/L361_Project/.venv/lib/python3.9/site-packages (from ipython>=6.1.0->ipywidgets) (4.9.0)\n",
-      "Requirement already satisfied: parso<0.9.0,>=0.8.4 in /Users/macbook/Desktop/L361/L361_Project/.venv/lib/python3.9/site-packages (from jedi>=0.16->ipython>=6.1.0->ipywidgets) (0.8.4)\n",
-      "Requirement already satisfied: ptyprocess>=0.5 in /Users/macbook/Desktop/L361/L361_Project/.venv/lib/python3.9/site-packages (from pexpect>4.3->ipython>=6.1.0->ipywidgets) (0.7.0)\n",
-      "Requirement already satisfied: wcwidth in /Users/macbook/Desktop/L361/L361_Project/.venv/lib/python3.9/site-packages (from prompt-toolkit<3.1.0,>=3.0.41->ipython>=6.1.0->ipywidgets) (0.2.13)\n",
-      "Requirement already satisfied: executing>=1.2.0 in /Users/macbook/Desktop/L361/L361_Project/.venv/lib/python3.9/site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (2.2.0)\n",
-      "Requirement already satisfied: asttokens>=2.1.0 in /Users/macbook/Desktop/L361/L361_Project/.venv/lib/python3.9/site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (3.0.0)\n",
-      "Requirement already satisfied: pure-eval in /Users/macbook/Desktop/L361/L361_Project/.venv/lib/python3.9/site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (0.2.3)\n",
-      "Requirement already satisfied: numpy==1.26.4 in /Users/macbook/Desktop/L361/L361_Project/.venv/lib/python3.9/site-packages (1.26.4)\n",
-      "Requirement already satisfied: urllib3==1.26.6 in /Users/macbook/Desktop/L361/L361_Project/.venv/lib/python3.9/site-packages (1.26.6)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "! pip install -q flwr[simulation] flwr-datasets[vision] torch torchvision matplotlib\n",
     "! pip install -U ipywidgets\n",
@@ -44,18 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training on cpu\n",
-      "Flower 1.15.1 / PyTorch 2.2.2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import OrderedDict\n",
     "from typing import Dict, List, Optional, Tuple, Union, Callable\n",
@@ -65,6 +26,7 @@
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
+    "import copy\n",
     "import torch.nn.functional as F\n",
     "import torchvision.transforms as transforms\n",
     "from datasets.utils.logging import disable_progress_bar\n",
@@ -99,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,6 +164,7 @@
     "            optimizer.zero_grad()\n",
     "            outputs = net(images)\n",
     "\n",
+    "            proximal_term = 0.0\n",
     "            for local_weights, global_weights in zip(net.parameters(), global_params):\n",
     "                proximal_term += (local_weights - global_weights).norm(2)\n",
     "            loss = criterion(net(images), labels) + (proximal_mu / 2) * proximal_term\n",
@@ -216,6 +179,72 @@
     "        epoch_loss /= len(trainloader.dataset)\n",
     "        epoch_acc = correct / total\n",
     "        print(f\"Epoch {epoch+1}: train loss {epoch_loss}, accuracy {epoch_acc}\")\n",
+    "\n",
+    "\n",
+    "def train_moon(net,train_loader, global_net,previous_net, epochs, mu, temperature):\n",
+    "    \"\"\"Training function for MOON.\"\"\"\n",
+    "    criterion = torch.nn.CrossEntropyLoss()\n",
+    "    optimizer = torch.optim.Adam(net.parameters())\n",
+    "\n",
+    "    previous_net.eval()\n",
+    "    for param in previous_net.parameters():\n",
+    "        param.requires_grad = False\n",
+    "\n",
+    "    cnt = 0\n",
+    "    cos = torch.nn.CosineSimilarity(dim=-1)\n",
+    "\n",
+    "    for epoch in range(epochs):\n",
+    "        epoch_loss_collector = []\n",
+    "        epoch_loss1_collector = []\n",
+    "        epoch_loss2_collector = []\n",
+    "        for _, (x, target) in enumerate(train_loader):\n",
+    "            x, target = x, target\n",
+    "            optimizer.zero_grad()\n",
+    "            x.requires_grad = False\n",
+    "            target.requires_grad = False\n",
+    "            target = target.long()\n",
+    "\n",
+    "            # pro1 is the representation by the current model (Line 14 of Algorithm 1)\n",
+    "            _, pro1, out = net(x)\n",
+    "            # pro2 is the representation by the global model (Line 15 of Algorithm 1)\n",
+    "            _, pro2, _ = global_net(x)\n",
+    "            # posi is the positive pair\n",
+    "            posi = cos(pro1, pro2)\n",
+    "            logits = posi.reshape(-1, 1)\n",
+    "\n",
+    "            # pro 3 is the representation by the previous model (Line 16 of Algorithm 1)\n",
+    "            _, pro3, _ = previous_net(x)\n",
+    "            # nega is the negative pair\n",
+    "            nega = cos(pro1, pro3)\n",
+    "            logits = torch.cat((logits, nega.reshape(-1, 1)), dim=1)\n",
+    "\n",
+    "            previous_net.to(\"cpu\")\n",
+    "            logits /= temperature\n",
+    "            labels = torch.zeros(x.size(0)).cuda().long()\n",
+    "            # compute the model-contrastive loss (Line 17 of Algorithm 1)\n",
+    "            loss2 = mu * criterion(logits, labels)\n",
+    "            # compute the cross-entropy loss (Line 13 of Algorithm 1)\n",
+    "            loss1 = criterion(out, target)\n",
+    "            # compute the loss (Line 18 of Algorithm 1)\n",
+    "            loss = loss1 + loss2\n",
+    "\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "\n",
+    "            cnt += 1\n",
+    "            epoch_loss_collector.append(loss.item())\n",
+    "            epoch_loss1_collector.append(loss1.item())\n",
+    "            epoch_loss2_collector.append(loss2.item())\n",
+    "\n",
+    "        epoch_loss = sum(epoch_loss_collector) / len(epoch_loss_collector)\n",
+    "        epoch_loss1 = sum(epoch_loss1_collector) / len(epoch_loss1_collector)\n",
+    "        epoch_loss2 = sum(epoch_loss2_collector) / len(epoch_loss2_collector)\n",
+    "        print(\n",
+    "            \"Epoch: %d Loss: %f Loss1: %f Loss2: %f\"\n",
+    "            % (epoch, epoch_loss, epoch_loss1, epoch_loss2)\n",
+    "        )\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -249,17 +278,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of rounds: 25\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "NETWORK_LEN = len(Net().state_dict().keys())\n",
@@ -281,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,6 +448,19 @@
     "        min_fit_clients: int = 2,\n",
     "        min_evaluate_clients: int = 2,\n",
     "        min_available_clients: int = 2,\n",
+    "        evaluate_fn: Optional[\n",
+    "            Callable[\n",
+    "                [int, NDArrays, dict[str, Scalar]],\n",
+    "                Optional[tuple[float, dict[str, Scalar]]],\n",
+    "            ]\n",
+    "        ] = None,\n",
+    "        on_fit_config_fn: Optional[Callable[[int], dict[str, Scalar]]] = None,\n",
+    "        on_evaluate_config_fn: Optional[Callable[[int], dict[str, Scalar]]] = None,\n",
+    "        accept_failures: bool = True,\n",
+    "        initial_parameters: Optional[Parameters] = None,\n",
+    "        fit_metrics_aggregation_fn: Optional[MetricsAggregationFn] = None,\n",
+    "        evaluate_metrics_aggregation_fn: Optional[MetricsAggregationFn] = None,\n",
+    "        inplace: bool = True,\n",
     "        layer_update_strategy: str = \"sequential\",\n",
     "        \n",
     "    ) -> None:\n",
@@ -436,6 +470,15 @@
     "        self.min_fit_clients = min_fit_clients\n",
     "        self.min_evaluate_clients = min_evaluate_clients\n",
     "        self.min_available_clients = min_available_clients\n",
+    "        self.evaluate_fn = evaluate_fn\n",
+    "        self.on_fit_config_fn = on_fit_config_fn\n",
+    "        self.on_evaluate_config_fn = on_evaluate_config_fn\n",
+    "        self.accept_failures = accept_failures\n",
+    "        self.initial_parameters = initial_parameters\n",
+    "        self.fit_metrics_aggregation_fn = fit_metrics_aggregation_fn\n",
+    "        self.evaluate_metrics_aggregation_fn = evaluate_metrics_aggregation_fn\n",
+    "        self.inplace = inplace\n",
+    "\n",
     "        self.layer_update_strategy = layer_update_strategy  # 'sequential' or 'cyclic'\n",
     "        self.current_layer = 0  # Track which layer to update\n",
     "        self.number_of_layers = None\n",
@@ -619,14 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,8 +679,8 @@
     "\n",
     "    def fit(self, parameters, config):\n",
     "        print(f\"[Client {self.partition_id}] fit, config: {config}\")\n",
-    "        global_params = copy.deepcopy(self.net).parameters()\n",
     "        set_parameters(self.net, parameters)\n",
+    "        global_params = copy.deepcopy(self.net).parameters()\n",
     "        freeze_layers(self.net, config[\"trainable_layers\"])\n",
     "        proxima_train(self.net, self.trainloader, EPOCHS, config[\"proximal_mu\"], global_params)\n",
     "        return get_parameters(self.net), len(self.trainloader), {}\n",
@@ -670,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +791,7 @@
     "    config = ServerConfig(num_rounds=NUM_OF_ROUNDS)\n",
     "    return ServerAppComponents(\n",
     "        config=config,\n",
-    "        strategy=FedPartProx(),\n",
+    "        strategy=FedPartProx(proximal_mu=0.1),\n",
     "    )\n",
     "\n",
     "server = ServerApp(server_fn=server_fn)\n",
@@ -767,6 +803,61 @@
     "    num_supernodes=NUM_PARTITIONS,\n",
     "    backend_config=backend_config,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# FedMoon Experiments:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FedMoonPartFlowerClient(NumPyClient):\n",
+    "    def __init__(self, partition_id, net, trainloader, valloader):\n",
+    "        self.partition_id = partition_id\n",
+    "        self.net = net\n",
+    "        self.trainloader = trainloader\n",
+    "        self.valloader = valloader\n",
+    "        self.previous_net = copy.deepcopy(net)\n",
+    "\n",
+    "    def get_parameters(self, config):\n",
+    "        print(f\"[Client {self.partition_id}] get_parameters\")\n",
+    "        return [get_parameters(self.net)[config[\"trainable_layers\"]]]\n",
+    "\n",
+    "    def fit(self, parameters, config):\n",
+    "        print(f\"[Client {self.partition_id}] fit, config: {config}\")\n",
+    "        set_parameters(self.net, parameters)\n",
+    "        #TODO Need to add previous and global model  \n",
+    "        prev_model = \"Need to find how to get previous model\"\n",
+    "        global_model = \"Need to add global Mode\"x\n",
+    "\n",
+    "        freeze_layers(self.net, config[\"trainable_layers\"])\n",
+    "        train_moon(self.net, self.trainloader, global_model,previous_net, EPOCHS, 5, 0.5 )\n",
+    "        return get_parameters(self.net), len(self.trainloader), {}\n",
+    "\n",
+    "    def evaluate(self, parameters, config):\n",
+    "        print(f\"[Client {self.partition_id}] evaluate, config: {config}\")\n",
+    "        set_parameters(self.net, parameters)\n",
+    "        loss, accuracy = test(self.net, self.valloader)\n",
+    "        return float(loss), len(self.valloader), {\"accuracy\": float(accuracy)}\n",
+    "\n",
+    "\n",
+    "def client_fn(context: Context) -> Client:\n",
+    "    net = Net().to(DEVICE)\n",
+    "    partition_id = context.node_config[\"partition-id\"]\n",
+    "    num_partitions = context.node_config[\"num-partitions\"]\n",
+    "    trainloader, valloader, _ = load_datasets(partition_id, num_partitions)\n",
+    "    return FedProxPartFlowerClient(partition_id, net, trainloader, valloader).to_client()\n",
+    "\n",
+    "\n",
+    "# Create the ClientApp\n",
+    "client = ClientApp(client_fn=client_fn)"
    ]
   }
  ],
