--- a/experiments/fedmom_strategies/fedavgmom/fedavg_velocity_data_heterogenity.ipynb
+++ b/experiments/fedmom_strategies/fedavgmom/fedavg_velocity_data_heterogenity.ipynb
@@ -13,9 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training on mps\n",
+      "Flower 1.15.2 / PyTorch 2.6.0\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import OrderedDict\n",
     "from typing import Dict, List, Optional, Tuple, Union, Callable\n",
@@ -73,9 +82,10 @@
    "source": [
     "\n",
     "BATCH_SIZE = 32\n",
-    "\n",
+    "from flwr_datasets.partitioner import DirichletPartitioner\n",
     "def load_datasets(partition_id, num_partitions: int):\n",
-    "    fds = FederatedDataset(dataset=\"cifar10\", partitioners={\"train\": num_partitions})\n",
+    "    drichlet_partitioner = DirichletPartitioner(num_partitions=num_partitions, alpha=0.1, partition_by=\"label\")\n",
+    "    fds = FederatedDataset(dataset=\"cifar10\", partitioners={\"train\": drichlet_partitioner})\n",
     "    partition = fds.load_partition(partition_id)\n",
     "    # Divide data on each node: 80% train, 20% test\n",
     "    partition_train_test = partition.train_test_split(test_size=0.2, seed=42)\n",
@@ -269,9 +279,9 @@
     "\n",
     "NETWORK_LEN = len(Net().state_dict().keys())\n",
     "EPOCHS = 8\n",
-    "NUM_PARTITIONS = 3\n",
+    "NUM_PARTITIONS = 6\n",
     "NUM_OF_CYCLES  = 1\n",
-    "NUM_OF_FULL_UPDATES_BETWEEN_CYCLES = 2\n",
+    "NUM_OF_FULL_UPDATES_BETWEEN_CYCLES = 5\n",
     "NUM_OF_ROUNDS = (NUM_OF_CYCLES * NUM_OF_FULL_UPDATES_BETWEEN_CYCLES) + (NUM_OF_CYCLES * NETWORK_LEN *2)\n",
     "print(f\"Number of rounds: {NUM_OF_ROUNDS}\")\n",
     "backend_config = {\"client_resources\": {\"num_cpus\": 1, \"num_gpus\": 0.0}}\n"
@@ -443,7 +453,7 @@
     "        if self.evaluate_fn is None:\n",
     "            # No evaluation function provided\n",
     "            return None\n",
-    "        parameters_ndarrays = parameters_to_ndarrays(self.latest_parameters)\n",
+    "        parameters_ndarrays = parameters_to_ndarrays(parameters)\n",
     "        eval_res = self.evaluate_fn(server_round, parameters_ndarrays, {})\n",
     "        if eval_res is None:\n",
     "            return None\n",
@@ -822,28 +832,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f'../data/fed_part_{EPOCHS}.p', 'wb') as file:\n",
-    "    pickle.dump(fed_part_avg_result, file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "load_run = 2\n",
-    "with open(f'../data/fed_part_{load_run}.p', 'rb') as file:\n",
-    "    data = pickle.load(file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(data)"
+    "with open(f'results/fed_part_avg_data_heterogenity_result.p', 'wb') as file:\n",
+    "    pickle.dump(fed_part_avg_result, file)\n",
+    "\n",
+    "with open(f'results/fed_part_avg_model_data_heterogenity_results.p', 'wb') as file:\n",
+    "    pickle.dump(fed_part_avg_model_results, file)"
    ]
   },
   {
@@ -858,51 +851,51 @@
     "\n",
     "\n",
     "# Plot the total size of parameters for each round\n",
-    "fed_part_avg_rounds = list(fed_part_avg_result.keys())\n",
-    "fed_part_avg_sizes = [fed_part_avg_result[round][\"total_size\"] for round in fed_part_avg_rounds]\n",
+    "# fed_part_avg_rounds = list(fed_part_avg_result.keys())\n",
+    "# fed_part_avg_sizes = [fed_part_avg_result[round][\"total_size\"] for round in fed_part_avg_rounds]\n",
     "\n",
-    "plt.figure(figsize=(10, 5))\n",
-    "plt.plot(fed_part_avg_rounds, fed_part_avg_sizes, marker='o', linestyle='-', color='b', label='FedPartAvgMomentum')\n",
-    "# plt.plot(fed_avg_rounds, fed_avg_sizes, marker='o', linestyle='-', color='r', label='FedAvg')\n",
-    "plt.xlabel('Round')\n",
-    "plt.ylabel('Total Size of Parameters (bytes)')\n",
-    "plt.title('Total Size of Parameters for Each Round')\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
+    "# plt.figure(figsize=(10, 5))\n",
+    "# plt.plot(fed_part_avg_rounds, fed_part_avg_sizes, marker='o', linestyle='-', color='b', label='FedPartAvgMomentum')\n",
+    "# # plt.plot(fed_avg_rounds, fed_avg_sizes, marker='o', linestyle='-', color='r', label='FedAvg')\n",
+    "# plt.xlabel('Round')\n",
+    "# plt.ylabel('Total Size of Parameters (bytes)')\n",
+    "# plt.title('Total Size of Parameters for Each Round')\n",
+    "# plt.legend()\n",
+    "# plt.grid(True)\n",
     "\n",
-    "fed_part_avg_losses = [fed_part_avg_result[round][\"total_loss\"] for round in fed_part_avg_rounds]\n",
+    "# fed_part_avg_losses = [fed_part_avg_result[round][\"total_loss\"] for round in fed_part_avg_rounds]\n",
     "\n",
-    "plt.figure(figsize=(10, 5))\n",
-    "plt.plot(fed_part_avg_rounds, fed_part_avg_losses, marker='o', linestyle='-', color='b', label='FedPartAvgMomentum')\n",
-    "# plt.plot(fed_avg_rounds, fed_avg_losses, marker='o', linestyle='-', color='r', label='FedAvg')\n",
-    "plt.xlabel('Round')\n",
-    "plt.ylabel('Total Loss')\n",
-    "plt.title('Total Loss for Each Round')\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
+    "# plt.figure(figsize=(10, 5))\n",
+    "# plt.plot(fed_part_avg_rounds, fed_part_avg_losses, marker='o', linestyle='-', color='b', label='FedPartAvgMomentum')\n",
+    "# # plt.plot(fed_avg_rounds, fed_avg_losses, marker='o', linestyle='-', color='r', label='FedAvg')\n",
+    "# plt.xlabel('Round')\n",
+    "# plt.ylabel('Total Loss')\n",
+    "# plt.title('Total Loss for Each Round')\n",
+    "# plt.legend()\n",
+    "# plt.grid(True)\n",
     "\n",
     "\n",
-    "fed_part_avg_model_rounds = list(fed_part_avg_model_results.keys())\n",
-    "fed_part_avg_accuracies = [fed_part_avg_model_results[round][\"global_metrics\"][\"accuracy\"] for round in fed_part_avg_model_rounds]\n",
+    "# fed_part_avg_model_rounds = list(fed_part_avg_model_results.keys())\n",
+    "# fed_part_avg_accuracies = [fed_part_avg_model_results[round][\"global_metrics\"][\"accuracy\"] for round in fed_part_avg_model_rounds]\n",
     "\n",
-    "plt.figure(figsize=(10, 5))\n",
-    "plt.plot(fed_part_avg_model_rounds, fed_part_avg_accuracies, marker='o', linestyle='-', color='b', label='FedPartAvgMomentum')\n",
-    "# plt.plot(fed_avg_model_rounds, fed_avg_accuracies, marker='o', linestyle='-', color='r', label='FedAvg')\n",
-    "plt.xlabel('Round')\n",
-    "plt.ylabel('Accuracy')\n",
-    "plt.title('Accuracy for Each Round')\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
+    "# plt.figure(figsize=(10, 5))\n",
+    "# plt.plot(fed_part_avg_model_rounds, fed_part_avg_accuracies, marker='o', linestyle='-', color='b', label='FedPartAvgMomentum')\n",
+    "# # plt.plot(fed_avg_model_rounds, fed_avg_accuracies, marker='o', linestyle='-', color='r', label='FedAvg')\n",
+    "# plt.xlabel('Round')\n",
+    "# plt.ylabel('Accuracy')\n",
+    "# plt.title('Accuracy for Each Round')\n",
+    "# plt.legend()\n",
+    "# plt.grid(True)\n",
     "\n",
-    "fed_part_avg_global_losses = [fed_part_avg_model_results[round][\"global_loss\"] for round in fed_part_avg_model_rounds]\n",
+    "# fed_part_avg_global_losses = [fed_part_avg_model_results[round][\"global_loss\"] for round in fed_part_avg_model_rounds]\n",
     "\n",
-    "plt.figure(figsize=(10, 5))\n",
-    "plt.plot(fed_part_avg_model_rounds, fed_part_avg_global_losses, marker='o', linestyle='-', color='b', label='FedPartAvgMomentum')\n",
-    "# plt.plot(fed_avg_model_rounds, fed_avg_global_losses, marker='o', linestyle='-', color='r', label='FedAvg')\n",
-    "plt.xlabel('Round')\n",
-    "plt.ylabel('Loss')\n",
-    "plt.legend()\n",
-    "plt.title('Loss for Each Round')\n"
+    "# plt.figure(figsize=(10, 5))\n",
+    "# plt.plot(fed_part_avg_model_rounds, fed_part_avg_global_losses, marker='o', linestyle='-', color='b', label='FedPartAvgMomentum')\n",
+    "# # plt.plot(fed_avg_model_rounds, fed_avg_global_losses, marker='o', linestyle='-', color='r', label='FedAvg')\n",
+    "# plt.xlabel('Round')\n",
+    "# plt.ylabel('Loss')\n",
+    "# plt.legend()\n",
+    "# plt.title('Loss for Each Round')\n"
    ]
   },
   {
@@ -1041,7 +1034,7 @@
     "        if self.evaluate_fn is None:\n",
     "            # No evaluation function provided\n",
     "            return None\n",
-    "        parameters_ndarrays = parameters_to_ndarrays(self.latest_parameters)\n",
+    "        parameters_ndarrays = parameters_to_ndarrays(parameters)\n",
     "        eval_res = self.evaluate_fn(server_round, parameters_ndarrays, {})\n",
     "        if eval_res is None:\n",
     "            return None\n",
@@ -1449,55 +1442,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "with open(f'results/fed_momentum_weighting_data_heterogenity_results.p', 'wb') as file:\n",
+    "    pickle.dump(fed_momentum_weighting_results, file)\n",
+    "\n",
+    "with open(f'results/fed_momentum_weighting_model_data_heterogenity_results.p', 'wb') as file:\n",
+    "    pickle.dump(fed_momentum_weighting_model_results, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "# Plot the total size of parameters for each round\n",
-    "fed_momentum_weighting_rounds = list(fed_momentum_weighting_results.keys())\n",
-    "fed_momentum_weighting_sizes = [fed_momentum_weighting_results[round][\"total_size\"] for round in fed_momentum_weighting_rounds]\n",
+    "# # Plot the total size of parameters for each round\n",
+    "# fed_momentum_weighting_rounds = list(fed_momentum_weighting_results.keys())\n",
+    "# fed_momentum_weighting_sizes = [fed_momentum_weighting_results[round][\"total_size\"] for round in fed_momentum_weighting_rounds]\n",
     "\n",
-    "plt.figure(figsize=(10, 5))\n",
-    "plt.plot(fed_momentum_weighting_rounds, fed_momentum_weighting_sizes, marker='o', linestyle='-', color='b', label='FedPartWithVelocityWeighting')\n",
-    "# plt.plot(fed_avg_rounds, fed_avg_sizes, marker='o', linestyle='-', color='r', label='FedAvg')\n",
-    "plt.xlabel('Round')\n",
-    "plt.ylabel('Total Size of Parameters (bytes)')\n",
-    "plt.title('Total Size of Parameters for Each Round')\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
+    "# plt.figure(figsize=(10, 5))\n",
+    "# plt.plot(fed_momentum_weighting_rounds, fed_momentum_weighting_sizes, marker='o', linestyle='-', color='b', label='FedPartWithVelocityWeighting')\n",
+    "# # plt.plot(fed_avg_rounds, fed_avg_sizes, marker='o', linestyle='-', color='r', label='FedAvg')\n",
+    "# plt.xlabel('Round')\n",
+    "# plt.ylabel('Total Size of Parameters (bytes)')\n",
+    "# plt.title('Total Size of Parameters for Each Round')\n",
+    "# plt.legend()\n",
+    "# plt.grid(True)\n",
     "\n",
-    "fed_momentum_weighting_losses = [fed_momentum_weighting_results[round][\"total_loss\"] for round in fed_momentum_weighting_rounds]\n",
+    "# fed_momentum_weighting_losses = [fed_momentum_weighting_results[round][\"total_loss\"] for round in fed_momentum_weighting_rounds]\n",
     "\n",
-    "plt.figure(figsize=(10, 5))\n",
-    "plt.plot(fed_momentum_weighting_rounds, fed_momentum_weighting_losses, marker='o', linestyle='-', color='b', label='FedPartWithVelocityWeighting')\n",
-    "# plt.plot(fed_avg_rounds, fed_avg_losses, marker='o', linestyle='-', color='r', label='FedAvg')\n",
-    "plt.xlabel('Round')\n",
-    "plt.ylabel('Total Loss')\n",
-    "plt.title('Total Loss for Each Round')\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
+    "# plt.figure(figsize=(10, 5))\n",
+    "# plt.plot(fed_momentum_weighting_rounds, fed_momentum_weighting_losses, marker='o', linestyle='-', color='b', label='FedPartWithVelocityWeighting')\n",
+    "# # plt.plot(fed_avg_rounds, fed_avg_losses, marker='o', linestyle='-', color='r', label='FedAvg')\n",
+    "# plt.xlabel('Round')\n",
+    "# plt.ylabel('Total Loss')\n",
+    "# plt.title('Total Loss for Each Round')\n",
+    "# plt.legend()\n",
+    "# plt.grid(True)\n",
     "\n",
     "\n",
-    "fed_momentum_weighting_model_rounds = list(fed_momentum_weighting_model_results.keys())\n",
-    "fed_momentum_weighting_accuracies = [fed_momentum_weighting_model_results[round][\"global_metrics\"][\"accuracy\"] for round in fed_momentum_weighting_model_rounds]\n",
+    "# fed_momentum_weighting_model_rounds = list(fed_momentum_weighting_model_results.keys())\n",
+    "# fed_momentum_weighting_accuracies = [fed_momentum_weighting_model_results[round][\"global_metrics\"][\"accuracy\"] for round in fed_momentum_weighting_model_rounds]\n",
     "\n",
-    "plt.figure(figsize=(10, 5))\n",
-    "plt.plot(fed_momentum_weighting_model_rounds, fed_momentum_weighting_accuracies, marker='o', linestyle='-', color='b', label='FedPartWithVelocityWeighting')\n",
-    "# plt.plot(fed_avg_model_rounds, fed_avg_accuracies, marker='o', linestyle='-', color='r', label='FedAvg')\n",
-    "plt.xlabel('Round')\n",
-    "plt.ylabel('Accuracy')\n",
-    "plt.title('Accuracy for Each Round')\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
+    "# plt.figure(figsize=(10, 5))\n",
+    "# plt.plot(fed_momentum_weighting_model_rounds, fed_momentum_weighting_accuracies, marker='o', linestyle='-', color='b', label='FedPartWithVelocityWeighting')\n",
+    "# # plt.plot(fed_avg_model_rounds, fed_avg_accuracies, marker='o', linestyle='-', color='r', label='FedAvg')\n",
+    "# plt.xlabel('Round')\n",
+    "# plt.ylabel('Accuracy')\n",
+    "# plt.title('Accuracy for Each Round')\n",
+    "# plt.legend()\n",
+    "# plt.grid(True)\n",
     "\n",
-    "fed_momentum_weighting_global_losses = [fed_momentum_weighting_model_results[round][\"global_loss\"] for round in fed_momentum_weighting_model_rounds]\n",
+    "# fed_momentum_weighting_global_losses = [fed_momentum_weighting_model_results[round][\"global_loss\"] for round in fed_momentum_weighting_model_rounds]\n",
     "\n",
-    "plt.figure(figsize=(10, 5))\n",
-    "plt.plot(fed_momentum_weighting_model_rounds, fed_momentum_weighting_global_losses, marker='o', linestyle='-', color='b', label='FedPartWithVelocityWeighting')\n",
-    "# plt.plot(fed_avg_model_rounds, fed_avg_global_losses, marker='o', linestyle='-', color='r', label='FedAvg')\n",
-    "plt.xlabel('Round')\n",
-    "plt.ylabel('Loss')\n",
-    "plt.legend()\n",
-    "plt.title('Loss for Each Round')"
+    "# plt.figure(figsize=(10, 5))\n",
+    "# plt.plot(fed_momentum_weighting_model_rounds, fed_momentum_weighting_global_losses, marker='o', linestyle='-', color='b', label='FedPartWithVelocityWeighting')\n",
+    "# # plt.plot(fed_avg_model_rounds, fed_avg_global_losses, marker='o', linestyle='-', color='r', label='FedAvg')\n",
+    "# plt.xlabel('Round')\n",
+    "# plt.ylabel('Loss')\n",
+    "# plt.legend()\n",
+    "# plt.title('Loss for Each Round')"
    ]
   },
   {
@@ -1510,7 +1516,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fl_proj",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1524,7 +1530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
