Complete fed prox velocity

--- a/experiments/fedmom_strategies/fedproxmom/fedprox_velocity.ipynb
+++ b/experiments/fedmom_strategies/fedproxmom/fedprox_velocity.ipynb
@@ -928,28 +928,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f'../data/fed_part_{EPOCHS}.p', 'wb') as file:\n",
-    "    pickle.dump(fed_part_avg_result, file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "load_run = 2\n",
-    "with open(f'../data/fed_part_{load_run}.p', 'rb') as file:\n",
-    "    data = pickle.load(file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(data)"
+    "with open(f'results/fed_part_prox_momentum_result.p', 'wb') as file:\n",
+    "    pickle.dump(fed_part_avg_result, file)\n",
+    "\n",
+    "with open(f'results/fed_part_prox_momentum_model_results.p', 'wb') as file:\n",
+    "    pickle.dump(fed_part_avg_model_results, file)"
    ]
   },
   {
@@ -963,52 +946,52 @@
     "\n",
     "\n",
     "\n",
-    "# Plot the total size of parameters for each round\n",
-    "fed_part_avg_rounds = list(fed_part_avg_result.keys())\n",
-    "fed_part_avg_sizes = [fed_part_avg_result[round][\"total_size\"] for round in fed_part_avg_rounds]\n",
+    "# # Plot the total size of parameters for each round\n",
+    "# fed_part_avg_rounds = list(fed_part_avg_result.keys())\n",
+    "# fed_part_avg_sizes = [fed_part_avg_result[round][\"total_size\"] for round in fed_part_avg_rounds]\n",
     "\n",
-    "plt.figure(figsize=(10, 5))\n",
-    "plt.plot(fed_part_avg_rounds, fed_part_avg_sizes, marker='o', linestyle='-', color='b', label='FedPartAvgMomentum')\n",
-    "# plt.plot(fed_avg_rounds, fed_avg_sizes, marker='o', linestyle='-', color='r', label='FedAvg')\n",
-    "plt.xlabel('Round')\n",
-    "plt.ylabel('Total Size of Parameters (bytes)')\n",
-    "plt.title('Total Size of Parameters for Each Round')\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
+    "# plt.figure(figsize=(10, 5))\n",
+    "# plt.plot(fed_part_avg_rounds, fed_part_avg_sizes, marker='o', linestyle='-', color='b', label='FedPartAvgMomentum')\n",
+    "# # plt.plot(fed_avg_rounds, fed_avg_sizes, marker='o', linestyle='-', color='r', label='FedAvg')\n",
+    "# plt.xlabel('Round')\n",
+    "# plt.ylabel('Total Size of Parameters (bytes)')\n",
+    "# plt.title('Total Size of Parameters for Each Round')\n",
+    "# plt.legend()\n",
+    "# plt.grid(True)\n",
     "\n",
-    "fed_part_avg_losses = [fed_part_avg_result[round][\"total_loss\"] for round in fed_part_avg_rounds]\n",
+    "# fed_part_avg_losses = [fed_part_avg_result[round][\"total_loss\"] for round in fed_part_avg_rounds]\n",
     "\n",
-    "plt.figure(figsize=(10, 5))\n",
-    "plt.plot(fed_part_avg_rounds, fed_part_avg_losses, marker='o', linestyle='-', color='b', label='FedPartAvgMomentum')\n",
-    "# plt.plot(fed_avg_rounds, fed_avg_losses, marker='o', linestyle='-', color='r', label='FedAvg')\n",
-    "plt.xlabel('Round')\n",
-    "plt.ylabel('Total Loss')\n",
-    "plt.title('Total Loss for Each Round')\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
+    "# plt.figure(figsize=(10, 5))\n",
+    "# plt.plot(fed_part_avg_rounds, fed_part_avg_losses, marker='o', linestyle='-', color='b', label='FedPartAvgMomentum')\n",
+    "# # plt.plot(fed_avg_rounds, fed_avg_losses, marker='o', linestyle='-', color='r', label='FedAvg')\n",
+    "# plt.xlabel('Round')\n",
+    "# plt.ylabel('Total Loss')\n",
+    "# plt.title('Total Loss for Each Round')\n",
+    "# plt.legend()\n",
+    "# plt.grid(True)\n",
     "\n",
     "\n",
-    "fed_part_avg_model_rounds = list(fed_part_avg_model_results.keys())\n",
-    "fed_part_avg_accuracies = [fed_part_avg_model_results[round][\"global_metrics\"][\"accuracy\"] for round in fed_part_avg_model_rounds]\n",
+    "# fed_part_avg_model_rounds = list(fed_part_avg_model_results.keys())\n",
+    "# fed_part_avg_accuracies = [fed_part_avg_model_results[round][\"global_metrics\"][\"accuracy\"] for round in fed_part_avg_model_rounds]\n",
     "\n",
-    "plt.figure(figsize=(10, 5))\n",
-    "plt.plot(fed_part_avg_model_rounds, fed_part_avg_accuracies, marker='o', linestyle='-', color='b', label='FedPartAvgMomentum')\n",
-    "# plt.plot(fed_avg_model_rounds, fed_avg_accuracies, marker='o', linestyle='-', color='r', label='FedAvg')\n",
-    "plt.xlabel('Round')\n",
-    "plt.ylabel('Accuracy')\n",
-    "plt.title('Accuracy for Each Round')\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
+    "# plt.figure(figsize=(10, 5))\n",
+    "# plt.plot(fed_part_avg_model_rounds, fed_part_avg_accuracies, marker='o', linestyle='-', color='b', label='FedPartAvgMomentum')\n",
+    "# # plt.plot(fed_avg_model_rounds, fed_avg_accuracies, marker='o', linestyle='-', color='r', label='FedAvg')\n",
+    "# plt.xlabel('Round')\n",
+    "# plt.ylabel('Accuracy')\n",
+    "# plt.title('Accuracy for Each Round')\n",
+    "# plt.legend()\n",
+    "# plt.grid(True)\n",
     "\n",
-    "fed_part_avg_global_losses = [fed_part_avg_model_results[round][\"global_loss\"] for round in fed_part_avg_model_rounds]\n",
+    "# fed_part_avg_global_losses = [fed_part_avg_model_results[round][\"global_loss\"] for round in fed_part_avg_model_rounds]\n",
     "\n",
-    "plt.figure(figsize=(10, 5))\n",
-    "plt.plot(fed_part_avg_model_rounds, fed_part_avg_global_losses, marker='o', linestyle='-', color='b', label='FedPartAvgMomentum')\n",
-    "# plt.plot(fed_avg_model_rounds, fed_avg_global_losses, marker='o', linestyle='-', color='r', label='FedAvg')\n",
-    "plt.xlabel('Round')\n",
-    "plt.ylabel('Loss')\n",
-    "plt.legend()\n",
-    "plt.title('Loss for Each Round')\n"
+    "# plt.figure(figsize=(10, 5))\n",
+    "# plt.plot(fed_part_avg_model_rounds, fed_part_avg_global_losses, marker='o', linestyle='-', color='b', label='FedPartAvgMomentum')\n",
+    "# # plt.plot(fed_avg_model_rounds, fed_avg_global_losses, marker='o', linestyle='-', color='r', label='FedAvg')\n",
+    "# plt.xlabel('Round')\n",
+    "# plt.ylabel('Loss')\n",
+    "# plt.legend()\n",
+    "# plt.title('Loss for Each Round')\n"
    ]
   },
   {
@@ -1559,55 +1542,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
+    "with open(f'results/fed_momentum_weighting_results.p', 'wb') as file:\n",
+    "    pickle.dump(fed_momentum_weighting_results, file)\n",
     "\n",
-    "# Plot the total size of parameters for each round\n",
-    "fed_momentum_weighting_rounds = list(fed_momentum_weighting_results.keys())\n",
-    "fed_momentum_weighting_sizes = [fed_momentum_weighting_results[round][\"total_size\"] for round in fed_momentum_weighting_rounds]\n",
-    "\n",
-    "plt.figure(figsize=(10, 5))\n",
-    "plt.plot(fed_momentum_weighting_rounds, fed_momentum_weighting_sizes, marker='o', linestyle='-', color='b', label='FedPartWithVelocityWeighting')\n",
-    "# plt.plot(fed_avg_rounds, fed_avg_sizes, marker='o', linestyle='-', color='r', label='FedAvg')\n",
-    "plt.xlabel('Round')\n",
-    "plt.ylabel('Total Size of Parameters (bytes)')\n",
-    "plt.title('Total Size of Parameters for Each Round')\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
-    "\n",
-    "fed_momentum_weighting_losses = [fed_momentum_weighting_results[round][\"total_loss\"] for round in fed_momentum_weighting_rounds]\n",
-    "\n",
-    "plt.figure(figsize=(10, 5))\n",
-    "plt.plot(fed_momentum_weighting_rounds, fed_momentum_weighting_losses, marker='o', linestyle='-', color='b', label='FedPartWithVelocityWeighting')\n",
-    "# plt.plot(fed_avg_rounds, fed_avg_losses, marker='o', linestyle='-', color='r', label='FedAvg')\n",
-    "plt.xlabel('Round')\n",
-    "plt.ylabel('Total Loss')\n",
-    "plt.title('Total Loss for Each Round')\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
-    "\n",
-    "\n",
-    "fed_momentum_weighting_model_rounds = list(fed_momentum_weighting_model_results.keys())\n",
-    "fed_momentum_weighting_accuracies = [fed_momentum_weighting_model_results[round][\"global_metrics\"][\"accuracy\"] for round in fed_momentum_weighting_model_rounds]\n",
-    "\n",
-    "plt.figure(figsize=(10, 5))\n",
-    "plt.plot(fed_momentum_weighting_model_rounds, fed_momentum_weighting_accuracies, marker='o', linestyle='-', color='b', label='FedPartWithVelocityWeighting')\n",
-    "# plt.plot(fed_avg_model_rounds, fed_avg_accuracies, marker='o', linestyle='-', color='r', label='FedAvg')\n",
-    "plt.xlabel('Round')\n",
-    "plt.ylabel('Accuracy')\n",
-    "plt.title('Accuracy for Each Round')\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
-    "\n",
-    "fed_momentum_weighting_global_losses = [fed_momentum_weighting_model_results[round][\"global_loss\"] for round in fed_momentum_weighting_model_rounds]\n",
-    "\n",
-    "plt.figure(figsize=(10, 5))\n",
-    "plt.plot(fed_momentum_weighting_model_rounds, fed_momentum_weighting_global_losses, marker='o', linestyle='-', color='b', label='FedPartWithVelocityWeighting')\n",
-    "# plt.plot(fed_avg_model_rounds, fed_avg_global_losses, marker='o', linestyle='-', color='r', label='FedAvg')\n",
-    "plt.xlabel('Round')\n",
-    "plt.ylabel('Loss')\n",
-    "plt.legend()\n",
-    "plt.title('Loss for Each Round')"
+    "with open(f'results/fed_momentum_weighting_model_results.p', 'wb') as file:\n",
+    "    pickle.dump(fed_momentum_weighting_model_results, file)"
    ]
   },
   {
@@ -1615,7 +1554,57 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "# # Plot the total size of parameters for each round\n",
+    "# fed_momentum_weighting_rounds = list(fed_momentum_weighting_results.keys())\n",
+    "# fed_momentum_weighting_sizes = [fed_momentum_weighting_results[round][\"total_size\"] for round in fed_momentum_weighting_rounds]\n",
+    "\n",
+    "# plt.figure(figsize=(10, 5))\n",
+    "# plt.plot(fed_momentum_weighting_rounds, fed_momentum_weighting_sizes, marker='o', linestyle='-', color='b', label='FedPartWithVelocityWeighting')\n",
+    "# # plt.plot(fed_avg_rounds, fed_avg_sizes, marker='o', linestyle='-', color='r', label='FedAvg')\n",
+    "# plt.xlabel('Round')\n",
+    "# plt.ylabel('Total Size of Parameters (bytes)')\n",
+    "# plt.title('Total Size of Parameters for Each Round')\n",
+    "# plt.legend()\n",
+    "# plt.grid(True)\n",
+    "\n",
+    "# fed_momentum_weighting_losses = [fed_momentum_weighting_results[round][\"total_loss\"] for round in fed_momentum_weighting_rounds]\n",
+    "\n",
+    "# plt.figure(figsize=(10, 5))\n",
+    "# plt.plot(fed_momentum_weighting_rounds, fed_momentum_weighting_losses, marker='o', linestyle='-', color='b', label='FedPartWithVelocityWeighting')\n",
+    "# # plt.plot(fed_avg_rounds, fed_avg_losses, marker='o', linestyle='-', color='r', label='FedAvg')\n",
+    "# plt.xlabel('Round')\n",
+    "# plt.ylabel('Total Loss')\n",
+    "# plt.title('Total Loss for Each Round')\n",
+    "# plt.legend()\n",
+    "# plt.grid(True)\n",
+    "\n",
+    "\n",
+    "# fed_momentum_weighting_model_rounds = list(fed_momentum_weighting_model_results.keys())\n",
+    "# fed_momentum_weighting_accuracies = [fed_momentum_weighting_model_results[round][\"global_metrics\"][\"accuracy\"] for round in fed_momentum_weighting_model_rounds]\n",
+    "\n",
+    "# plt.figure(figsize=(10, 5))\n",
+    "# plt.plot(fed_momentum_weighting_model_rounds, fed_momentum_weighting_accuracies, marker='o', linestyle='-', color='b', label='FedPartWithVelocityWeighting')\n",
+    "# # plt.plot(fed_avg_model_rounds, fed_avg_accuracies, marker='o', linestyle='-', color='r', label='FedAvg')\n",
+    "# plt.xlabel('Round')\n",
+    "# plt.ylabel('Accuracy')\n",
+    "# plt.title('Accuracy for Each Round')\n",
+    "# plt.legend()\n",
+    "# plt.grid(True)\n",
+    "\n",
+    "# fed_momentum_weighting_global_losses = [fed_momentum_weighting_model_results[round][\"global_loss\"] for round in fed_momentum_weighting_model_rounds]\n",
+    "\n",
+    "# plt.figure(figsize=(10, 5))\n",
+    "# plt.plot(fed_momentum_weighting_model_rounds, fed_momentum_weighting_global_losses, marker='o', linestyle='-', color='b', label='FedPartWithVelocityWeighting')\n",
+    "# # plt.plot(fed_avg_model_rounds, fed_avg_global_losses, marker='o', linestyle='-', color='r', label='FedAvg')\n",
+    "# plt.xlabel('Round')\n",
+    "# plt.ylabel('Loss')\n",
+    "# plt.legend()\n",
+    "# plt.title('Loss for Each Round')"
+   ]
   }
  ],
  "metadata": {
