--- a/experiments/fedmom_strategies/fedavgmom/fedavg_velocity_data_heterogenity.ipynb
+++ b/experiments/fedmom_strategies/fedavgmom/fedavg_velocity_data_heterogenity.ipynb
@@ -441,6 +441,7 @@
     "        ndarrays = get_parameters(net)\n",
     "        self.layer_training_sequence = self.generate_layer_training_sequence()\n",
     "        self.number_of_layers = len(ndarrays)\n",
+    "        self.latest_parameters = ndarrays_to_parameters(ndarrays)\n",
     "\n",
     "        return ndarrays_to_parameters(ndarrays)\n",
     "    \n",
@@ -685,7 +686,10 @@
     "        if config[\"trainable_layers\"] == -1:\n",
     "            trained_layers = parameters\n",
     "        else:\n",
-    "            trained_layers = [parameters[config[\"trainable_layers\"]]]\n",
+    "            trained_layers = [\n",
+    "                parameters[config[\"trainable_layers\"]],\n",
+    "                parameters[config[\"trainable_layers\"] + 1]\n",
+    "            ]\n",
     "        \n",
     "        return trained_layers\n",
     "\n",
@@ -1022,6 +1026,7 @@
     "        ndarrays = get_parameters(net)\n",
     "        self.layer_training_sequence = self.generate_layer_training_sequence()\n",
     "        self.number_of_layers = len(ndarrays)\n",
+    "        self.latest_parameters = ndarrays_to_parameters(ndarrays)\n",
     "\n",
     "        return ndarrays_to_parameters(ndarrays)\n",
     "    \n",
