--- a/experiments/fedmom_strategies/fedproxmom/fedprox_velocity.ipynb
+++ b/experiments/fedmom_strategies/fedproxmom/fedprox_velocity.ipynb
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,6 +457,7 @@
     "        ndarrays = get_parameters(net)\n",
     "        self.layer_training_sequence = self.generate_layer_training_sequence()\n",
     "        self.number_of_layers = len(ndarrays)\n",
+    "        self.latest_parameters = ndarrays_to_parameters(ndarrays)\n",
     "\n",
     "        return ndarrays_to_parameters(ndarrays)\n",
     "    \n",
@@ -676,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,8 +702,11 @@
     "        if config[\"trainable_layers\"] == -1:\n",
     "            trained_layers = parameters\n",
     "        else:\n",
-    "            trained_layers = [parameters[config[\"trainable_layers\"]]]\n",
-    "        \n",
+    "            trained_layers = [\n",
+    "                parameters[config[\"trainable_layers\"]],\n",
+    "                parameters[config[\"trainable_layers\"] + 1]\n",
+    "            ]\n",
+    "\n",
     "        return trained_layers\n",
     "\n",
     "    def _save_model_state(self):\n",
@@ -1119,6 +1123,7 @@
     "        ndarrays = get_parameters(net)\n",
     "        self.layer_training_sequence = self.generate_layer_training_sequence()\n",
     "        self.number_of_layers = len(ndarrays)\n",
+    "        self.latest_parameters = ndarrays_to_parameters(ndarrays)\n",
     "\n",
     "        return ndarrays_to_parameters(ndarrays)\n",
     "    \n",
