--- a/experiments/fedmom_strategies/fedproxmom/fedprox_velocity_client_dropout.ipynb
+++ b/experiments/fedmom_strategies/fedproxmom/fedprox_velocity_client_dropout.ipynb
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,6 +491,7 @@
     "        ndarrays = get_parameters(net)\n",
     "        self.layer_training_sequence = self.generate_layer_training_sequence()\n",
     "        self.number_of_layers = len(ndarrays)\n",
+    "        self.latest_parameters = ndarrays_to_parameters(ndarrays)\n",
     "\n",
     "        return ndarrays_to_parameters(ndarrays)\n",
     "    \n",
@@ -710,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +736,10 @@
     "        if config[\"trainable_layers\"] == -1:\n",
     "            trained_layers = parameters\n",
     "        else:\n",
-    "            trained_layers = [parameters[config[\"trainable_layers\"]]]\n",
+    "            trained_layers = [\n",
+    "                parameters[config[\"trainable_layers\"]],\n",
+    "                parameters[config[\"trainable_layers\"] + 1]\n",
+    "            ]\n",
     "        \n",
     "        return trained_layers\n",
     "\n",
@@ -1156,6 +1160,7 @@
     "        ndarrays = get_parameters(net)\n",
     "        self.layer_training_sequence = self.generate_layer_training_sequence()\n",
     "        self.number_of_layers = len(ndarrays)\n",
+    "        self.latest_parameters = ndarrays_to_parameters(ndarrays)\n",
     "\n",
     "        return ndarrays_to_parameters(ndarrays)\n",
     "    \n",
